--- a/ContaJunstaApp/App.xaml
+++ b/ContaJunstaApp/App.xaml
@@ -1,17 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<Application x:Class="ContaJunstaApp.App"
+             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:ContaJunstaApp"
-             x:Class="ContaJunstaApp.App">
+             UserAppTheme="Unspecified">
     <Application.Resources>
         <ResourceDictionary>
-
-        <!--
-            For information about styling .NET MAUI pages
-            please refer to the documentation:
-            https://go.microsoft.com/fwlink/?linkid=2282329
-        -->
-
+            <!-- seus recursos -->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
