--- a/ContaJunstaApp/Components/Pages/SelectedEventPage.razor.css
+++ b/ContaJunstaApp/Components/Pages/SelectedEventPage.razor.css
@@ -1,4 +1,13 @@
-﻿.page-root {
+﻿* {
+    box-sizing: border-box;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+.page-root {
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
