--- a/ContaJunstaApp/Components/_Imports.razor
+++ b/ContaJunstaApp/Components/_Imports.razor
@@ -6,7 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using ContaJunstaApp
+@using ContaJunstaApp.Services
 @using ContaJunstaApp.Components
 @using ContaJunstaApp.Components.Models
-@using ContaJunstaApp.Components.Services
-
